crates/derive-sqlite/src/snapshots/derive_sqlite__lambda__test__binding_and_output_mapping-2.snap
---
source: crates/derive-sqlite/src/lambda.rs
expression: snap(&lambda)
---
{
  "bindings": [
    {
      "encoding": "$amount",
      "projection": {
        "field": "amount",
        "inference": {
          "default": "the default",
          "string": {}
        },
        "ptr": "/amount"
      }
    },
    {
      "encoding": "$sender",
      "projection": {
        "field": "sender",
        "inference": {
          "default": "the default",
          "string": {}
        },
        "ptr": "/sender"
      }
    }
  ],
  "outputs": []
}
