crates/derive-sqlite/src/snapshots/derive_sqlite__lambda__test__binding_and_output_mapping-3.snap
---
source: crates/derive-sqlite/src/lambda.rs
expression: snap(&lambda)
---
{
  "bindings": [
    {
      "encoding": "$recipient",
      "projection": {
        "field": "recipient",
        "inference": {
          "string": {}
        },
        "ptr": "/recipient"
      }
    },
    {
      "encoding": "$amount",
      "projection": {
        "field": "amount",
        "inference": {
          "string": {}
        },
        "ptr": "/amount"
      }
    },
    {
      "encoding": "$id",
      "projection": {
        "field": "id",
        "inference": {
          "string": {}
        },
        "ptr": "/id"
      }
    }
  ],
  "outputs": [
    [
      "$id",
      2
    ],
    [
      "account",
      null
    ],
    [
      "upsert_balance",
      null
    ]
  ]
}
