crates/derive-sqlite/src/snapshots/derive_sqlite__lambda__test__binding_and_output_mapping-5.snap
---
source: crates/derive-sqlite/src/lambda.rs
expression: snap(&lambda)
---
{
  "bindings": [
    {
      "encoding": "$sender",
      "projection": {
        "field": "sender",
        "inference": {
          "string": {}
        },
        "ptr": "/sender"
      }
    }
  ],
  "outputs": [
    [
      "id",
      null
    ],
    [
      "parent",
      null
    ],
    [
      "notused",
      null
    ],
    [
      "detail",
      null
    ]
  ]
}
