crates/derive-sqlite/src/snapshots/derive_sqlite__lambda__test__binding_and_output_mapping-6.snap
---
source: crates/derive-sqlite/src/lambda.rs
expression: snap(&lambda)
---
{
  "bindings": [],
  "outputs": []
}
